force-app/main/default/objects/Order/fields/AccountTradeName__c.field-meta.xml
<CustomField>
    <fullName>AccountTradeName__c</fullName>
    <label>Trading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>