force-app/main/default/objects/Order/fields/ActivitySector__c.field-meta.xml
<CustomField>
    <fullName>ActivitySector__c</fullName>
    <label>Setor de Atividade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Agricultura</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Pecuária</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Maquinas Implementos</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Commodities</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Outras Saídas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>