force-app/main/default/objects/Order/fields/ApprovalJustification__c.field-meta.xml
<CustomField>
    <fullName>ApprovalJustification__c</fullName>
    <label>Justificativa de Aprovação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>