force-app/main/default/objects/Order/fields/Approved1__c.field-meta.xml
<CustomField>
    <fullName>Approved1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado 1</label>
    <type>Checkbox</type>
</CustomField>