force-app/main/default/objects/Order/fields/Approved2__c.field-meta.xml
<CustomField>
    <fullName>Approved2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado 2</label>
    <type>Checkbox</type>
</CustomField>