force-app/main/default/objects/Order/fields/Approved3__c.field-meta.xml
<CustomField>
    <fullName>Approved3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado 3</label>
    <type>Checkbox</type>
</CustomField>