force-app/main/default/objects/Order/fields/ApproverDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>ApproverDiscountAmount__c</fullName>
    <label>Aprovador desconto acima de</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>