force-app/main/default/objects/Order/fields/AppVersion__c.field-meta.xml
<CustomField>
    <fullName>AppVersion__c</fullName>
    <label>Versão do App</label>
    <length>60</length>
    <type>Text</type>
</CustomField>