force-app/main/default/objects/Order/fields/BarterType__c.field-meta.xml
<CustomField>
    <fullName>BarterType__c</fullName>
    <label>Tipo de Barter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BarterType</valueSetName>
    </valueSet>
</CustomField>