force-app/main/default/objects/Order/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente Cobrança</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>BillingAccountOrders</relationshipName>
    <type>Lookup</type>
</CustomField>