force-app/main/default/objects/Order/fields/BillingCrop__c.field-meta.xml
<CustomField>
    <fullName>BillingCrop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra de Faturamento do Insumo</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Pedidos (Safra de Faturamento do Insumo)</relationshipLabel>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>