force-app/main/default/objects/Order/fields/BonificationApprovalNote__c.field-meta.xml
<CustomField>
    <fullName>BonificationApprovalNote__c</fullName>
    <description>Campo que armazena os produtos de um pedido de bonificação que serão exibidos na tela de pedido e na tela de aprovação.</description>
    <inlineHelpText>Campo que armazena os produtos de um pedido de bonificação que serão exibidos na tela de pedido e na tela de aprovação.</inlineHelpText>
    <label>Observação Aprovação Bonificação</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>