force-app/main/default/objects/Order/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <description>Campo para o RTV descrever o motivo que levou o cancelamento do pedido.</description>
    <label>Motivo do Cancelamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>