force-app/main/default/objects/Order/fields/CommercialApproval__c.field-meta.xml
<CustomField>
    <fullName>CommercialApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo Obsoleto e não será mais utilizado, só não foi deletado ainda por conta das interdependências de código, 18/05/2021 by Alan</description>
    <label>Aprovação Comercial</label>
    <type>Checkbox</type>
</CustomField>