force-app/main/default/objects/Order/fields/CommercialMeasureUnit__c.field-meta.xml
<CustomField>
    <fullName>CommercialMeasureUnit__c</fullName>
    <label>Unidade Medida Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>Kg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>