force-app/main/default/objects/Order/fields/CommodityProduct2Id__c.field-meta.xml
<CustomField>
    <fullName>CommodityProduct2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Commodity</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CommodityProduct</relationshipLabel>
    <relationshipName>CommodityProducts</relationshipName>
    <type>Lookup</type>
</CustomField>