force-app/main/default/objects/Order/fields/CommodityShipping__c.field-meta.xml
<CustomField>
    <fullName>CommodityShipping__c</fullName>
    <label>Frete Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>