force-app/main/default/objects/Order/fields/ContainIntegrationError__c.field-meta.xml
<CustomField>
    <fullName>ContainIntegrationError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contém Erro Integração</label>
    <type>Checkbox</type>
</CustomField>