force-app/main/default/objects/Order/fields/ContainStockError__c.field-meta.xml
<CustomField>
    <fullName>ContainStockError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que informa se algum produto do pedido esta com erro de estoque insuficiente na hora da venda, o estoque é controlado a partir do objeto &quot;Controle de Estoque&quot;.</description>
    <inlineHelpText>Campo que informa se algum produto do pedido esta com erro de estoque insuficiente na hora da venda, o estoque é controlado a partir do objeto &quot;Controle de Estoque&quot;.</inlineHelpText>
    <label>Contem Erro Estoque?</label>
    <type>Checkbox</type>
</CustomField>