force-app/main/default/objects/Order/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>Data referente ao termino do contrato de venda de insumos</description>
    <inlineHelpText>Data referente ao termino do contrato de venda de insumos</inlineHelpText>
    <label>Data Fim Contrato de Insumos</label>
    <type>Date</type>
</CustomField>