force-app/main/default/objects/Order/fields/ContractGrainCode__c.field-meta.xml
<CustomField>
    <fullName>ContractGrainCode__c</fullName>
    <externalId>true</externalId>
    <label>Código do Contrato de Grãos</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>