force-app/main/default/objects/Order/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <description>Este campo apenas reflete o número do pedido, ele foi criado apenas para renomear a label de Número do pedido para número do contrato.</description>
    <formula>OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Número do contrato</inlineHelpText>
    <label>Número do Contrato</label>
    <type>Text</type>
</CustomField>