force-app/main/default/objects/Order/fields/ContractOrder__c.field-meta.xml
<CustomField>
    <fullName>ContractOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Pedidos (Contrato de Pedido)</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>