force-app/main/default/objects/Order/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>Data referente ao contrato de venda de insumos</description>
    <inlineHelpText>Data referente ao contrato de venda de insumos</inlineHelpText>
    <label>Data Inicio Contrato de Insumos</label>
    <type>Date</type>
</CustomField>