force-app/main/default/objects/Order/fields/ContractSupplianceCode__c.field-meta.xml
<CustomField>
    <fullName>ContractSupplianceCode__c</fullName>
    <formula>ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Contrato de Insumos</label>
    <type>Text</type>
</CustomField>