force-app/main/default/objects/Order/fields/CreatedDateApp__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateApp__c</fullName>
    <label>Data de Criação App</label>
    <type>Date</type>
</CustomField>