force-app/main/default/objects/Order/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Crop__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>