force-app/main/default/objects/Order/fields/CurrentApprover__c.field-meta.xml
<CustomField>
    <fullName>CurrentApprover__c</fullName>
    <formula>IF(CommercialApproval__c, &apos;Setor Comercial&apos;,
IF(NOT(ISBLANK(MarginApprover__c)), MarginApprover__r.FirstName+&apos; &apos;+MarginApprover__r.LastName,
IF(NOT(ISBLANK( FinancialAdministrativeManager__c )), FinancialAdministrativeManager__r.FirstName+&apos; &apos;+FinancialAdministrativeManager__r.LastName,
IF(AND(NOT(ISBLANK( DiscountApprover__c )),  NOT(Approved1__c)), DiscountApprover__r.FirstName+&apos; &apos;+DiscountApprover__r.LastName,
IF(AND(NOT(ISBLANK( DiscountApprover2__c )), NOT(Approved2__c)), DiscountApprover2__r.FirstName+&apos; &apos;+DiscountApprover2__r.LastName,
IF(AND(NOT(ISBLANK( DiscountApprover3__c )), NOT(Approved3__c)), DiscountApprover3__r.FirstName+&apos; &apos;+DiscountApprover3__r.LastName,
IF(AND(NOT(ISBLANK( DiscountApprover4__c )), NOT(Approved4__c)), DiscountApprover4__r.FirstName+&apos; &apos;+DiscountApprover4__r.LastName, &apos;&apos;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aprovador Atual</label>
    <type>Text</type>
</CustomField>