force-app/main/default/objects/Order/fields/DeletedProductProcessSap__c.field-meta.xml
<CustomField>
    <fullName>DeletedProductProcessSap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pedido com produto marcado para exclusão?</description>
    <inlineHelpText>Pedido com produto marcado para exclusão?</inlineHelpText>
    <label>DeletedProductProcessSap</label>
    <type>Checkbox</type>
</CustomField>