force-app/main/default/objects/Order/fields/DeliveryQuantity__c.field-meta.xml
<CustomField>
    <fullName>DeliveryQuantity__c</fullName>
    <label>Quantidade Total de Entrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>