force-app/main/default/objects/Order/fields/DirectMargin__c.field-meta.xml
<CustomField>
    <fullName>DirectMargin__c</fullName>
    <inlineHelpText>Margem Direta é considerada a Margem Recomposta e as Campanhas, tanto da indústria quanto ForcaAgro, para formar o valor final previsto de cada negociação.

Cálculo: Preço Unitário - Custo / Preço Unitário</inlineHelpText>
    <label>Margem Direta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>