force-app/main/default/objects/Order/fields/DiscountApprovalNote__c.field-meta.xml
<CustomField>
    <fullName>DiscountApprovalNote__c</fullName>
    <description>Campo que informa as famílias de produtos que excederam o desconto permitido.</description>
    <label>Observação Aprovação Desconto</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>