force-app/main/default/objects/Order/fields/DiscountApprover2__c.field-meta.xml
<CustomField>
    <fullName>DiscountApprover2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>