force-app/main/default/objects/Order/fields/DiscountApprover3__c.field-meta.xml
<CustomField>
    <fullName>DiscountApprover3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AprovadorDiretorOrganizacao</relationshipName>
    <type>Lookup</type>
</CustomField>