force-app/main/default/objects/Order/fields/DiscountApprover4__c.field-meta.xml
<CustomField>
    <fullName>DiscountApprover4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AprovadorDescontoDiretor</relationshipName>
    <type>Lookup</type>
</CustomField>