force-app/main/default/objects/Order/fields/DistributionPublicUrl__c.field-meta.xml
<CustomField>
    <fullName>DistributionPublicUrl__c</fullName>
    <label>Links Públicos</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>