force-app/main/default/objects/Order/fields/DueDateFinancial__c.field-meta.xml
<CustomField>
    <fullName>DueDateFinancial__c</fullName>
    <label>Vencimento Financeiro</label>
    <type>Date</type>
</CustomField>