force-app/main/default/objects/Order/fields/EndDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>EndDeliveryDate__c</fullName>
    <inlineHelpText>Data de fim da Janela de Entrega.</inlineHelpText>
    <label>Data Fim Entrega Grão</label>
    <type>Date</type>
</CustomField>