force-app/main/default/objects/Order/fields/ExternalIdApp__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdApp__c</fullName>
    <label>Código Externo App</label>
    <length>60</length>
    <type>Text</type>
</CustomField>