force-app/main/default/objects/Order/fields/FinancialAdministrativeManager__c.field-meta.xml
<CustomField>
    <fullName>FinancialAdministrativeManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que indica se o pedido precisa de aprovação financeira, caso este campo esteja preenchido, o pedido precisa ser aprovado com o usuário que foi preenchido nesse campo.</description>
    <inlineHelpText>Campo que indica se o pedido precisa de aprovação financeira, caso este campo esteja preenchido, o pedido precisa ser aprovado com o usuário que foi preenchido nesse campo.</inlineHelpText>
    <label>Gerente Financeiro Administrativo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ManagerOrders</relationshipName>
    <type>Lookup</type>
</CustomField>