force-app/main/default/objects/Order/fields/FinancialApprovalNote__c.field-meta.xml
<CustomField>
    <fullName>FinancialApprovalNote__c</fullName>
    <description>Campo que armazena as datas de efetividade das listas de preço dos produtos do pedido.</description>
    <inlineHelpText>Campo que armazena as datas de efetividade das listas de preço dos produtos do pedido.</inlineHelpText>
    <label>Observação Aprovação Financeira</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>