force-app/main/default/objects/Order/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Modalidade Frete</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>