force-app/main/default/objects/Order/fields/GrainTableApproval__c.field-meta.xml
<CustomField>
    <fullName>GrainTableApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovação Mesa de Grãos</label>
    <type>Checkbox</type>
</CustomField>