force-app/main/default/objects/Order/fields/GrossUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>GrossUnitPrice__c</fullName>
    <label>Valor Commodity Bruto</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>