force-app/main/default/objects/Order/fields/HasOrderItemWithLowerMargin__c.field-meta.xml
<CustomField>
    <fullName>HasOrderItemWithLowerMargin__c</fullName>
    <formula>OrderItemWithoutLowerMargin__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contem Produtos com margem abaixo</label>
    <type>Checkbox</type>
</CustomField>