force-app/main/default/objects/Order/fields/HasOrderItemWithoutCost__c.field-meta.xml
<CustomField>
    <fullName>HasOrderItemWithoutCost__c</fullName>
    <formula>OrderItemWithoutCost__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contem produtos sem Custo</label>
    <type>Checkbox</type>
</CustomField>