force-app/main/default/objects/Order/fields/HasOrderItemWithoutMargin__c.field-meta.xml
<CustomField>
    <fullName>HasOrderItemWithoutMargin__c</fullName>
    <formula>OrderItemWithoutMargin__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contem produtos sem margem cadastrada</label>
    <type>Checkbox</type>
</CustomField>