force-app/main/default/objects/Order/fields/HasRefuseReason__c.field-meta.xml
<CustomField>
    <fullName>HasRefuseReason__c</fullName>
    <label>Tem motivo de recusa</label>
    <summaryFilterItems>
        <field>OrderItem.HasRefuseReason__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>