force-app/main/default/objects/Order/fields/Incoterms1__c.field-meta.xml
<CustomField>
    <fullName>Incoterms1__c</fullName>
    <label>Incoterms1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>