force-app/main/default/objects/Order/fields/InitialDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDeliveryDate__c</fullName>
    <inlineHelpText>Data de inicio da Janela de Entrega.</inlineHelpText>
    <label>Data Inicio Entrega Grão</label>
    <type>Date</type>
</CustomField>