force-app/main/default/objects/Order/fields/IntegrationErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>IntegrationErrorMessage__c</fullName>
    <label>Mensagem de Erro Integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>