force-app/main/default/objects/Order/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <inlineHelpText>Margem recomposta é calculada com base no valor comercial do produto, já considerando juros/antecipação e desconto comercial, comparando com o custo projetado(ZPRS).

Cálculo: Preço Unitário Sem Campanha - Custo / Preço Unitário Sem Campanha</inlineHelpText>
    <label>Margem Recomposta</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>