force-app/main/default/objects/Order/fields/MarginApprovalNote__c.field-meta.xml
<CustomField>
    <fullName>MarginApprovalNote__c</fullName>
    <label>Observação da Margem</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>