force-app/main/default/objects/Order/fields/MarginApprover__c.field-meta.xml
<CustomField>
    <fullName>MarginApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador Margem</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>