force-app/main/default/objects/Order/fields/ObservationRTV__c.field-meta.xml
<CustomField>
    <fullName>ObservationRTV__c</fullName>
    <label>Observação Retorna RTV</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>