force-app/main/default/objects/Order/fields/OldOrderCredit__c.field-meta.xml
<CustomField>
    <fullName>OldOrderCredit__c</fullName>
    <label>Saldo Pedido Antigo</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>