force-app/main/default/objects/Order/fields/OrderCreatedType__c.field-meta.xml
<CustomField>
    <fullName>OrderCreatedType__c</fullName>
    <formula>IF(ExternalIdApp__c != null, &apos;Venda App&apos;, &apos;Venda Web&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local pedido criado</label>
    <type>Text</type>
</CustomField>