force-app/main/default/objects/Order/fields/OrderCreator__c.field-meta.xml
<CustomField>
    <fullName>OrderCreator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Criador do Pedido</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreatedOrders</relationshipName>
    <type>Lookup</type>
</CustomField>