force-app/main/default/objects/Order/fields/OrderDueDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDueDate__c</fullName>
    <label>Data de Vencimento Pedido</label>
    <type>Date</type>
</CustomField>