force-app/main/default/objects/Order/fields/OrderItemWithoutCost__c.field-meta.xml
<CustomField>
    <fullName>OrderItemWithoutCost__c</fullName>
    <label>Pedido sem custo</label>
    <summaryFilterItems>
        <field>OrderItem.InvalidCost__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>