force-app/main/default/objects/Order/fields/OrderItemWithoutLowerMargin__c.field-meta.xml
<CustomField>
    <fullName>OrderItemWithoutLowerMargin__c</fullName>
    <label>Pedido com margem invalida</label>
    <summaryFilterItems>
        <field>OrderItem.LowerMargin__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>