force-app/main/default/objects/Order/fields/OrderItemWithoutMargin__c.field-meta.xml
<CustomField>
    <fullName>OrderItemWithoutMargin__c</fullName>
    <label>Pedido sem margem projetada</label>
    <summaryFilterItems>
        <field>OrderItem.ProjectedMargin__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>