force-app/main/default/objects/Order/fields/OrderMotive__c.field-meta.xml
<CustomField>
    <fullName>OrderMotive__c</fullName>
    <label>Motivo da Ordem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Visita</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Contato estabelecido em feira comercial</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Anúncio de televisão</label>
            </value>
            <value>
                <fullName>BGD</fullName>
                <label>Bonificação geração de demanda</label>
            </value>
            <value>
                <fullName>BNC</fullName>
                <label>Bonificação comercial</label>
            </value>
            <value>
                <fullName>BNI</fullName>
                <label>Bonificação Nota Indenização</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Recomendação de cliente</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Publicidade de jornal</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Preço excelente</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Fornecimento rápido</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Bom serviço</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Devolução acelerada</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>Diferença de preço: preço alto demais</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Fraca qualidade</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Danificado em trânsito</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Diferença de quantidades</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>Mercadoria deteriorada</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>Amostra gratuita</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Diferença preço: preço demasiado baixo</label>
            </value>
            <value>
                <fullName>ACM</fullName>
                <label>ACM motivo da ordem</label>
            </value>
            <value>
                <fullName>EDI</fullName>
                <label>Procedimento de nota de crédito</label>
            </value>
            <value>
                <fullName>JDR</fullName>
                <label>Direitos DRM - prot.prç., ShpDeb, reemb.</label>
            </value>
            <value>
                <fullName>PNS</fullName>
                <label>S2K: consulta de status de primas-notas</label>
            </value>
            <value>
                <fullName>POS</fullName>
                <label>S2K: consulta de status do pedido</label>
            </value>
            <value>
                <fullName>QBI</fullName>
                <label>SBWAP: compensação diferença (qtd./val.)</label>
            </value>
            <value>
                <fullName>QOI</fullName>
                <label>SBWAP: novas partidas aberto (qtd./val.)</label>
            </value>
            <value>
                <fullName>VBI</fullName>
                <label>SBWAP: compensação da diferença (valor)</label>
            </value>
            <value>
                <fullName>VOI</fullName>
                <label>SBWAP:  novas partidas aberto (valor)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>