force-app/main/default/objects/Order/fields/OrderRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>OrderRecordTypeName__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Registro do Pedido</label>
    <type>Text</type>
</CustomField>