force-app/main/default/objects/Order/fields/OrderRoute__c.field-meta.xml
<CustomField>
    <fullName>OrderRoute__c</fullName>
    <description>Campo para informações de rota na tela de pedido.</description>
    <label>Rota do pedido</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>