force-app/main/default/objects/Order/fields/OriginalOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Associado</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>OriginalOrders</relationshipName>
    <type>Lookup</type>
</CustomField>