force-app/main/default/objects/Order/fields/ParentOrderReferenceType__c.field-meta.xml
<CustomField>
    <fullName>ParentOrderReferenceType__c</fullName>
    <label>Tipo de Referência do pedido pai</label>
    <length>100</length>
    <type>Text</type>
</CustomField>