force-app/main/default/objects/Order/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Condição de pagamento</label>
    <referenceTo>PaymentCondition__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>