force-app/main/default/objects/Order/fields/PaymentForm__c.field-meta.xml
<CustomField>
    <fullName>PaymentForm__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#</fullName>
                <label>Bonificação</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Carteira - Clientes (Dinheiro)</label>
            </value>
            <value>
                <fullName>J</fullName>
                <label>Cheque - Clientes</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Boleto - Clientes</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Cartão de Débito - Clientes</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Cartão de Crédito - Clientes</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Depósito - Clientes</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Antecipado - Clientes</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Transfêrencia (livre)</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Barter Cliente</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Cessão de Crédito - Cliente</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>PIX - Clientes</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Barter Fornecedor</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Transferência - Fornecedor</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Cessão de Crédito - Fornecedor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>