force-app/main/default/objects/Order/fields/ProductionDeliveryLocation__c.field-meta.xml
<CustomField>
    <fullName>ProductionDeliveryLocation__c</fullName>
    <label>Local de Entrega Produção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>