force-app/main/default/objects/Order/fields/ProductionPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>ProductionPickupLocation__c</fullName>
    <label>Local de Retirada Produção</label>
    <length>255</length>
    <type>Text</type>
</CustomField>